// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxakl60 {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  vertical-align: middle;
}

.sxakl60zozsa--size-md {
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
  stroke-width: 2;
}

.sxakl60-qa905 {
  margin-left: var(--sx-space-3);
  height: 20px;
  width: 20px;
}

.sx03kze-e0n2q {
  opacity: 0;
  transition: opacity 150ms;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-c4y3k {
  justify-content: center;
  opacity: 1;
  position: absolute;
  transition: opacity 150ms;
}

.sxe5oww {
  animation-name: sxwho2l;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  background-color: currentColor;
  border-radius: var(--sx-radii-round);
}

.sxe5oww:nth-child(1) {
  animation-delay: -300ms;
}

.sxe5oww:nth-child(2) {
  animation-delay: -150ms;
}

.sxe5oww:nth-child(3) {
  animation-delay: 0;
}

.sxe5oww4btw3--size-md {
  height: 6px;
  width: 6px;
  margin-left: 2px;
  margin-right: 2px;
}

.sxsi1d3 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  padding: unset;
  text-decoration: none;
  transition: all 100ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxsi1d3dwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxsi1d3lmkcj--isRounded-true {
  border-radius: var(--sx-radii-round);
}

.sxsi1d32s6lw--isLoading-true {
  cursor: not-allowed;
  opacity: 0.6;
  pointer-events: none;
}

.sxsi1d30v6w3--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxsi1d30v6w3--c2[disabled] {
  background: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d30v6w3--c2:not([disabled]):hover,
.sxsi1d30v6w3--c2:not([disabled]):focus {
  background: var(--sx-colors-primaryMid);
  color: white;
}

.sxsi1d30v6w3--c2:not([disabled]):active {
  background: var(--sx-colors-primaryDark);
}

.sxsi1d3e8irk--c2 {
  border: 1px solid;
  border-color: currentColor;
  color: var(--sx-colors-primary);
}

.sxsi1d3e8irk--c2[disabled] {
  border-color: var(--sx-colors-tonal400);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d3e8irk--c2:not([disabled]):hover,
.sxsi1d3e8irk--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primaryMid);
}

.sxsi1d3e8irk--c2:not([disabled]):active {
  color: var(--sx-colors-primaryDark);
}

<div>
  <button
    class="sxsi1d3 sxsi1d303kze--theme-primary sxsi1d303kze--appearance-solid sxsi1d3dwxsw--size-md sxsi1d32s6lw--isLoading-true sxsi1d30v6w3--c2"
    type="button"
  >
    <div
      class="sx2cs53 sx2cs53-c4y3k"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
    </div>
    <span
      class="sx03kze sx03kze-e0n2q"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
.sxsi1d3 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  padding: unset;
  text-decoration: none;
  transition: all 100ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxsi1d3dwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxsi1d30v6w3--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxsi1d30v6w3--c2[disabled] {
  background: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d30v6w3--c2:not([disabled]):hover,
.sxsi1d30v6w3--c2:not([disabled]):focus {
  background: var(--sx-colors-primaryMid);
  color: white;
}

.sxsi1d30v6w3--c2:not([disabled]):active {
  background: var(--sx-colors-primaryDark);
}

<div>
  <button
    class="sxsi1d3 sxsi1d303kze--theme-primary sxsi1d303kze--appearance-solid sxsi1d3dwxsw--size-md sxsi1d30v6w3--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
.sxakl60 {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  vertical-align: middle;
}

.sxakl60zozsa--size-md {
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
  stroke-width: 2;
}

.sxakl60-qa905 {
  margin-left: var(--sx-space-3);
  height: 20px;
  width: 20px;
}

.sxsi1d3 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  padding: unset;
  text-decoration: none;
  transition: all 100ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxsi1d3dwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxsi1d30v6w3--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxsi1d30v6w3--c2[disabled] {
  background: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d30v6w3--c2:not([disabled]):hover,
.sxsi1d30v6w3--c2:not([disabled]):focus {
  background: var(--sx-colors-primaryMid);
  color: white;
}

.sxsi1d30v6w3--c2:not([disabled]):active {
  background: var(--sx-colors-primaryDark);
}

.sxsi1d3e8irk--c2 {
  border: 1px solid;
  border-color: currentColor;
  color: var(--sx-colors-primary);
}

.sxsi1d3e8irk--c2[disabled] {
  border-color: var(--sx-colors-tonal400);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d3e8irk--c2:not([disabled]):hover,
.sxsi1d3e8irk--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primaryMid);
}

.sxsi1d3e8irk--c2:not([disabled]):active {
  color: var(--sx-colors-primaryDark);
}

<div>
  <button
    class="sxsi1d3 sxsi1d303kze--theme-primary sxsi1d303kze--appearance-solid sxsi1d3dwxsw--size-md sxsi1d30v6w3--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxakl60 sxakl60zozsa--size-md sxakl60-qa905"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
.sxsi1d3 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  padding: unset;
  text-decoration: none;
  transition: all 100ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxsi1d3dwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxsi1d30v6w3--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxsi1d30v6w3--c2[disabled] {
  background: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d30v6w3--c2:not([disabled]):hover,
.sxsi1d30v6w3--c2:not([disabled]):focus {
  background: var(--sx-colors-primaryMid);
  color: white;
}

.sxsi1d30v6w3--c2:not([disabled]):active {
  background: var(--sx-colors-primaryDark);
}

.sxsi1d3e8irk--c2 {
  border: 1px solid;
  border-color: currentColor;
  color: var(--sx-colors-primary);
}

.sxsi1d3e8irk--c2[disabled] {
  border-color: var(--sx-colors-tonal400);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d3e8irk--c2:not([disabled]):hover,
.sxsi1d3e8irk--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primaryMid);
}

.sxsi1d3e8irk--c2:not([disabled]):active {
  color: var(--sx-colors-primaryDark);
}

<div>
  <button
    class="sxsi1d3 sxsi1d303kze--theme-primary sxsi1d303kze--appearance-solid sxsi1d3dwxsw--size-md sxsi1d30v6w3--c2"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled warning outline button 1`] = `
.sxsi1d3 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  padding: unset;
  text-decoration: none;
  transition: all 100ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxsi1d3dwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxsi1d30v6w3--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxsi1d30v6w3--c2[disabled] {
  background: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d30v6w3--c2:not([disabled]):hover,
.sxsi1d30v6w3--c2:not([disabled]):focus {
  background: var(--sx-colors-primaryMid);
  color: white;
}

.sxsi1d30v6w3--c2:not([disabled]):active {
  background: var(--sx-colors-primaryDark);
}

.sxsi1d3e8irk--c2 {
  border: 1px solid;
  border-color: currentColor;
  color: var(--sx-colors-primary);
}

.sxsi1d3e8irk--c2[disabled] {
  border-color: var(--sx-colors-tonal400);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d3e8irk--c2:not([disabled]):hover,
.sxsi1d3e8irk--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primaryMid);
}

.sxsi1d3e8irk--c2:not([disabled]):active {
  color: var(--sx-colors-primaryDark);
}

<div>
  <button
    class="sxsi1d3 sxsi1d303kze--theme-warning sxsi1d303kze--appearance-outline sxsi1d3dwxsw--size-md"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
.sxsi1d3 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  padding: unset;
  text-decoration: none;
  transition: all 100ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxsi1d3dwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxsi1d30v6w3--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxsi1d30v6w3--c2[disabled] {
  background: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d30v6w3--c2:not([disabled]):hover,
.sxsi1d30v6w3--c2:not([disabled]):focus {
  background: var(--sx-colors-primaryMid);
  color: white;
}

.sxsi1d30v6w3--c2:not([disabled]):active {
  background: var(--sx-colors-primaryDark);
}

.sxsi1d3e8irk--c2 {
  border: 1px solid;
  border-color: currentColor;
  color: var(--sx-colors-primary);
}

.sxsi1d3e8irk--c2[disabled] {
  border-color: var(--sx-colors-tonal400);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d3e8irk--c2:not([disabled]):hover,
.sxsi1d3e8irk--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primaryMid);
}

.sxsi1d3e8irk--c2:not([disabled]):active {
  color: var(--sx-colors-primaryDark);
}

<div>
  <button
    class="sxsi1d3 sxsi1d303kze--theme-primary sxsi1d303kze--appearance-outline sxsi1d3dwxsw--size-md sxsi1d3e8irk--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a rounded button  1`] = `
.sxakl60 {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  vertical-align: middle;
}

.sxakl60zozsa--size-md {
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
  stroke-width: 2;
}

.sxakl60-qa905 {
  margin-left: var(--sx-space-3);
  height: 20px;
  width: 20px;
}

.sxsi1d3 {
  align-items: center;
  background: unset;
  border: unset;
  border-radius: var(--sx-radii-0);
  cursor: pointer;
  display: flex;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  justify-content: center;
  padding: unset;
  text-decoration: none;
  transition: all 100ms ease-out;
  white-space: nowrap;
  width: max-content;
}

.sxsi1d3dwxsw--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-5);
  padding-right: var(--sx-space-5);
}

.sxsi1d3lmkcj--isRounded-true {
  border-radius: var(--sx-radii-round);
}

.sxsi1d30v6w3--c2 {
  background: var(--sx-colors-primary);
  color: white;
}

.sxsi1d30v6w3--c2[disabled] {
  background: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d30v6w3--c2:not([disabled]):hover,
.sxsi1d30v6w3--c2:not([disabled]):focus {
  background: var(--sx-colors-primaryMid);
  color: white;
}

.sxsi1d30v6w3--c2:not([disabled]):active {
  background: var(--sx-colors-primaryDark);
}

.sxsi1d3e8irk--c2 {
  border: 1px solid;
  border-color: currentColor;
  color: var(--sx-colors-primary);
}

.sxsi1d3e8irk--c2[disabled] {
  border-color: var(--sx-colors-tonal400);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxsi1d3e8irk--c2:not([disabled]):hover,
.sxsi1d3e8irk--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--sx-colors-primaryMid);
}

.sxsi1d3e8irk--c2:not([disabled]):active {
  color: var(--sx-colors-primaryDark);
}

<div>
  <button
    class="sxsi1d3 sxsi1d303kze--theme-primary sxsi1d303kze--appearance-solid sxsi1d3dwxsw--size-md sxsi1d3lmkcj--isRounded-true sxsi1d30v6w3--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxakl60 sxakl60zozsa--size-md sxakl60-qa905"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;
